Fix responsive issue on smaller screens

--- a/css/grid.css
+++ b/css/grid.css
@@ -9,11 +9,6 @@
     padding-right: 12px;
     box-sizing: border-box;
 }
-@media (min-width: 768px) {
-    .container {
-    width: 750px;
-    }
-}
 @media (min-width: 992px) {
     .container {
         width: 977px;
